versioned_docs/version-2026.1.1/professor/karina_dias_espartosa.mdx
---
sidebar_label: 'Karina Dias Espartosa'
---

import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Karina Dias Espartosa",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Biologia 3 - 202",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_14-2",
          "students": [
            "EIN2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Biologia II - 1228",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "BIOLOGIA II (490)",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "BIOLOGIA III",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "a_definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "BIOLOGIA III (510)",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "BIOLOGIA II (490)",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "a_definir",
          "students": [
            "AGO2024-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "BIOLOGIA III",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "a_definir",
          "students": [
            "IIN2019-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        },
        {
          "subject": "BIOLOGIA III (510)",
          "size": 1,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "a_definir",
          "students": [
            "EIN2023-DP"
          ],
          "time": "14:00 - 14:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Biologia II - 2420",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_5-1",
          "students": [
            "COM2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Biologia II - 616",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_12-2",
          "students": [
            "AGO2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Estágio curricular supervisionado em biologia I - 496",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Estágio curricular supervisionado em biologia II - 1421",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "sala_8-2",
          "students": [
            "BIO_ESPECIAL_1"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Karina Dias Espartosa

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>

